--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 <body class="hidden">
     <div id="container3D"></div>
     <button id="flipButton">БРОСИТЬ</button>
-    <button id="returnButton" onclick="location.href='https://nickyylable.github.io/lasthere/'">Вернуться</button>
+    <button id="returnButton" onclick="location.href='https://tolianius.github.io/all-games.github.io/'">Вернуться</button>
     <div id="resultText"></div>
     <div id="nsgocio-container">
 </div>
@@ -303,7 +303,7 @@
     
         returnButton.addEventListener("touchend", (e) => {
             returnButton.classList.remove("active");
-            location.href = 'https://nickyylable.github.io/lasthere/'; // Вызов функции при завершении касания
+            location.href = 'https://tolianius.github.io/all-games.github.io/'; // Вызов функции при завершении касания
         });
             
         document.getElementById("flipButton").addEventListener("click", () => {
